# saspy

./: .gitignore  README.md  pyproject.toml  test.ipynb
benchmark/: ablation.py  config.yaml  esn.py  main.py  utils.py
benchmarks/: benchmark.ipynb  config.yaml  esn.py  esn_validation.ipynb  mc_results.json  memory_capacity.ipynb  run_benchmark.py  utils.py
benchmarks/results/: BENCHMARK_FINAL.md  kuramoto_sivashinsky.json  lorenz.json  mackey_glass.json  mso8.json
benchmarks/results/density01/: kuramoto_sivashinsky.json  lorenz.json  mso8.json
benchmarks/results/ks_10chan/: kuramoto_sivashinsky.json
benchmarks/results/ks_density0/: kuramoto_sivashinsky.json
benchmarks/results/ks_new_channels/: kuramoto_sivashinsky.json
benchmarks/results/new_models/: BENCHMARK_NOTE.md  kuramoto_sivashinsky.json  lorenz.json  mso8.json
benchmarks/results/paper_benchmark/: PAPER_BENCHMARK.md  kuramoto_sivashinsky.json  lorenz.json  mso8.json
benchmarks/results/verify_clean/: lorenz.json
examples/: etth1_example.ipynb  mackey_glass_comparison.ipynb
realdata/: loader.py
saspy/: __init__.py  base.py  engine.py  forecaster.py  model.py  projector.py  ridge.py
saspy/basis/: __init__.py  base.py  block_linear.py  connectivity.py  diagonal.py  feature.py  lowrank.py  lru_block.py  q_init.py  random_fourier.py  scalar.py  sparse.py  sparse_poly.py
tests/: test_sas.py
