[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saspy"
version = "0.2.0"
description = "SAS (State Affine System) reservoir computing for time-series forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "TODO"}]
keywords = ["reservoir-computing", "time-series", "forecasting", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
examples = [
    "pandas",
    "matplotlib",
    "jupyter",
]

[tool.hatch.build.targets.wheel]
packages = ["saspy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
